[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "most_active_cookie"
version = "1.0.0"
description = "CLI tool that finds the most active cookie from an activity log file on a given day."
requires-python = ">=3.9"
license = "MIT"
license-files = ["LICENSE"]
dependencies = []

[project.scripts]
most-active-cookie = "main:main"

[tool.setuptools]
py-modules = ["main"]

[dependency-groups]
dev = ["pytest>=8.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
